@@ -1,3 +1,8 @@
+2007-12-03  Frank Warmerdam  <warmerdam@pobox.com>
+
+	* pj_transform.c: Small improvement in WGS84_ES precision to avoid
+	an unnecessary trip through geocentric space (eg bug 1531).
+
 2007-11-30  Frank Warmerdam  <warmerdam@pobox.com>
 
 	* add latlon and lonlat as aliases.
